--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="row">
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
-                            <h2 class="margin-b-0">Habilidades técnicas</h2>
+                            <h2 class="margin-b-0">Habilidades </h2>
                             <p></p>
                         </div>
                     </div>
